--- a/ADForward.ipynb
+++ b/ADForward.ipynb
@@ -2,18 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "id": "elegant-death",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling BenchmarkTools [6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf]\n",
+      "└ @ Base loading.jl:1278\n"
+     ]
+    }
+   ],
    "source": [
     "import Base: iterate,max, exp, sin, cos, tan, +, ^, -, *, /, sqrt, convert, promote_rule, zero,isless\n",
+    "using BenchmarkTools\n",
     "import Test: @test, @testset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "id": "median-welding",
    "metadata": {},
    "outputs": [
@@ -23,7 +33,7 @@
        "4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,17 +256,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "id": "emerging-motorcycle",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "^ (generic function with 67 methods)"
+       "^ (generic function with 68 methods)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +282,7 @@
     "    Dual(-x.x, -x.dx)\n",
     "end\n",
     "function *(x::Dual, y::Dual)\n",
-    "     println(\"mnożenie\")\n",
+    "#      println(\"mnożenie\")\n",
     "     Dual(x.x*y.x, x.x*y.dx + x.dx*y.x)\n",
     "end\n",
     "function /(x::Dual, y::Dual)\n",
@@ -281,9 +291,15 @@
     "function /(x::Array, y::Number)\n",
     "    return [i / y for i in x]\n",
     "end\n",
+    "\n",
     "function ^(a::Dual, x::Dual)\n",
-    "    println(\"Daszek\")\n",
-    "    Dual(a.x^x.x, a.x^x.x*log(a.x)*x.dx)\n",
+    "#     println(\"Daszek\")\n",
+    "    Dual(a.x^x.x, a.dx * x.x * a.x ^ (x.x - 1) + x.dx * a.x ^ x.x * log(a.x)) \n",
+    "end\n",
+    "\n",
+    "function ^(a::Dual, x::Integer)\n",
+    "#     println(\"Daszek\")\n",
+    "    Dual(a.x^x, a.dx * x * a.x ^ (x - 1)) \n",
     "end"
    ]
   },
@@ -409,7 +425,7 @@
    ],
    "source": [
     "function iterate(iter::Vector{Dual}, state=1)\n",
-    "    println(iter, \"Test22232323\")\n",
+    "#     println(iter, \"Test22232323\")\n",
     "    if state > length(iter)\n",
     "        return nothing\n",
     "    end\n",
@@ -420,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gothic-architecture",
+   "id": "fleet-rings",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -735,17 +751,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "id": "personalized-burning",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "id": "removed-consumption",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "rosenbrock (generic function with 1 method)"
+       "rosenbrock (generic function with 2 methods)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,65 +781,110 @@
     "        value += (1-x[i-1])^2 + 100*(x[i] - x[i-1]^2)^2\n",
     "    end\n",
     "    value\n",
-    "end"
+    "end\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 91,
    "id": "false-motivation",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mnożenie\n",
-      "mnożenie\n",
-      "mnożenie\n",
-      "mnożenie\n",
-      "Dual{Float64}(100.0, -400.0)Test22232323sa\n",
-      "Dual{Float64}(100.0, -400.0)Test22232323sa\n",
-      "mnożenie\n",
-      "mnożenie\n",
-      "mnożenie\n",
-      "mnożenie\n",
-      "Dual{Float64}(100.0, -400.0)Test22232323sa\n",
-      "Dual{Float64}(100.0, -400.0)Test22232323sa\n",
-      "mnożenie\n",
-      "mnożenie\n",
-      "mnożenie\n",
-      "mnożenie\n",
-      "Dual{Float64}(100.0, 200.0)Test22232323sa\n",
-      "Dual{Float64}(100.0, 200.0)Test22232323sa\n",
-      "mnożenie\n",
-      "mnożenie\n",
-      "mnożenie\n",
-      "mnożenie\n",
-      "Dual{Float64}(100.0, 200.0)Test22232323sa\n",
-      "Dual{Float64}(100.0, 200.0)Test22232323sa\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "1×2 Array{Float64,2}:\n",
-       " -400.0  200.0"
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  32.30 MiB\n",
+       "  allocs estimate:  21021\n",
+       "  --------------\n",
+       "  minimum time:     61.076 ms (0.00% GC)\n",
+       "  median time:      63.394 ms (2.19% GC)\n",
+       "  mean time:        63.776 ms (1.76% GC)\n",
+       "  maximum time:     68.505 ms (1.98% GC)\n",
+       "  --------------\n",
+       "  samples:          79\n",
+       "  evals/sample:     1"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# d = derivativeСalculation(rosenbrock,[1.0,2.0,3.0])\n",
-    "J(rosenbrock, [1., 2.])"
+    "@benchmark J(rosenbrock, [rand(1000,1)...])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 78,
+   "id": "composed-radio",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5340167841882746"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[rand(3,1)...]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "christian-classics",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.223582100365062"
+     ]
+    }
+   ],
+   "source": [
+    "s = rand(3,1)\n",
+    "print(s[1][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "orange-jefferson",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×7 Array{Float64,2}:\n",
+       " -400.0  1002.0  5804.0  16606.0  35808.0  65810.0  -5800.0"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "J(rosenbrock, [1., 2., 3, 4, 5,6 ,7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "fabulous-river",
    "metadata": {},
    "outputs": [
@@ -825,7 +894,7 @@
        "100"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,77 +905,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 43,
    "id": "efficient-advancement",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "rosenbrocka (generic function with 1 method)"
+       "rosenbrock (generic function with 2 methods)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function rosenbrocka(a, x)\n",
-    "#     value = zero(x[1])\n",
-    "    value = (1-a)^2 + 100*(x - a^2)^2\n",
-    "#     for i=2:length(x)\n",
-    "#         value += (1-x[i-1])^2 + 100*(x[i] - x[i-1]^2)^2\n",
-    "#     end\n",
+    "function rosenbrock(x)\n",
+    "    value = zero(x[1])\n",
+    "#     value = (1-a)^2 + 100*(x - a^2)^2\n",
+    "    for i=2:length(x)\n",
+    "        value += (1-x[i-1])^2 + 100*(x[i] - x[i-1]^2)^3\n",
+    "    end\n",
     "    value\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 31,
    "id": "european-triumph",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mMethodError: no method matching rosenbrock(::Dual{Int64}, ::Int64, ::Int64)\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  rosenbrock(::Any) at In[30]:1\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mMethodError: no method matching rosenbrock(::Dual{Int64}, ::Int64, ::Int64)\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  rosenbrock(::Any) at In[30]:1\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] (::var\"#df#3\"{typeof(rosenbrock),Int64})(::Array{Int64,1}) at ./In[8]:12",
+      " [2] derivativeСalculation(::Function, ::Int64, ::Array{Int64,1}) at ./In[8]:15",
+      " [3] top-level scope at In[31]:1",
+      " [4] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
+    }
+   ],
+   "source": [
+    "derivativeСalculation(rosenbrock,1,[1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "recreational-study",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "200"
+       "-2.185039863261519"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "derivativeСalculation(rosenbrocka,2,[1,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "recreational-study",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "tan(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "otherwise-things",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  5.20 KiB\n",
+       "  allocs estimate:  77\n",
+       "  --------------\n",
+       "  minimum time:     3.273 μs (0.00% GC)\n",
+       "  median time:      3.661 μs (0.00% GC)\n",
+       "  mean time:        4.419 μs (8.19% GC)\n",
+       "  maximum time:     455.269 μs (98.17% GC)\n",
+       "  --------------\n",
+       "  samples:          10000\n",
+       "  evals/sample:     8"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sin(2)"
+    "f(x::Vector) = [x[1], 5/x[3], 4x[2]^2-2x[3], x[3]*sin(x[1]), exp(x[1])/sum(x), x[1]^2 - x[2]^3 - 88]\n",
+    "@benchmark J(f,[rand(3,1)...]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "convenient-migration",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6×3 Array{Float64,2}:\n",
+       "     1.0          0.0          0.0\n",
+       "     0.0          0.0         -2.09133e-6\n",
+       "     0.0         17.6         -2.0\n",
+       " -1501.32         0.0          0.239249\n",
+       "     0.0117077   -7.55172e-6  -7.55172e-6\n",
+       "     5.8        -14.52         0.0"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "J(f, [2.9,2.2,1546.23])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "convenient-migration",
+   "id": "returning-ethiopia",
    "metadata": {},
    "outputs": [],
    "source": []
