--- a/ADForward.ipynb
+++ b/ADForward.ipynb
@@ -669,12 +669,12 @@
        "  memory estimate:  32.11 MiB\n",
        "  allocs estimate:  15018\n",
        "  --------------\n",
-       "  minimum time:     43.272 ms (0.00% GC)\n",
-       "  median time:      44.401 ms (1.68% GC)\n",
-       "  mean time:        44.423 ms (1.30% GC)\n",
-       "  maximum time:     46.074 ms (1.81% GC)\n",
+       "  minimum time:     43.212 ms (0.00% GC)\n",
+       "  median time:      44.108 ms (1.45% GC)\n",
+       "  mean time:        44.209 ms (1.13% GC)\n",
+       "  maximum time:     47.521 ms (0.00% GC)\n",
        "  --------------\n",
-       "  samples:          113\n",
+       "  samples:          114\n",
        "  evals/sample:     1"
       ]
      },
@@ -700,9 +700,9 @@
      "data": {
       "text/plain": [
        "3-element Vector{Float64}:\n",
-       " 0.28550047424009883\n",
-       " 0.7879154424730892\n",
-       " 0.7512923828954385"
+       " 0.45729765595003324\n",
+       " 0.9551764265774303\n",
+       " 0.5506191695086682"
       ]
      },
      "execution_count": 24,
@@ -724,7 +724,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4984213035902958"
+      "0.6475895176869497"
      ]
     }
    ],
@@ -869,10 +869,10 @@
        "  memory estimate:  5.27 KiB\n",
        "  allocs estimate:  79\n",
        "  --------------\n",
-       "  minimum time:     3.895 μs (0.00% GC)\n",
-       "  median time:      4.004 μs (0.00% GC)\n",
-       "  mean time:        4.392 μs (5.77% GC)\n",
-       "  maximum time:     306.459 μs (98.03% GC)\n",
+       "  minimum time:     3.933 μs (0.00% GC)\n",
+       "  median time:      4.041 μs (0.00% GC)\n",
+       "  mean time:        4.394 μs (5.21% GC)\n",
+       "  maximum time:     289.774 μs (97.92% GC)\n",
        "  --------------\n",
        "  samples:          10000\n",
        "  evals/sample:     8"
@@ -953,8 +953,8 @@
       "    gcsample: Bool false\n",
       "    time_tolerance: Float64 0.05\n",
       "    memory_tolerance: Float64 0.01\n",
-      "  times: Array{Float64}((10000,)) [3894.625, 3897.0, 3907.0, 3907.75, 3910.625, 3911.125, 3912.25, 3913.125, 3913.75, 3915.125  …  9591.25, 268100.25, 269645.375, 272748.75, 279168.5, 285023.125, 296392.0, 299909.5, 305793.625, 306459.125]\n",
-      "  gctimes: Array{Float64}((10000,)) [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0  …  0.0, 263268.75, 264776.25, 267842.125, 274061.75, 280171.625, 290211.75, 294728.75, 300589.0, 300417.625]\n",
+      "  times: Array{Float64}((10000,)) [3933.375, 3935.0, 3937.875, 3942.875, 3943.125, 3944.0, 3944.5, 3944.875, 3946.625, 3946.625  …  11986.75, 247868.625, 249471.25, 250823.5, 253074.125, 253084.125, 256742.25, 260741.875, 271286.25, 289774.0]\n",
+      "  gctimes: Array{Float64}((10000,)) [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0  …  0.0, 243103.5, 244699.125, 245910.625, 248343.75, 248148.125, 251971.75, 255965.125, 266294.125, 283754.0]\n",
       "  memory: Int64 5392\n",
       "  allocs: Int64 79\n"
      ]
@@ -963,9 +963,9 @@
      "data": {
       "text/plain": [
        "3-element Vector{Float64}:\n",
-       " 0.09133400288437121\n",
-       " 0.26634042641367883\n",
-       " 0.27308547560421714"
+       " 0.05492853965120337\n",
+       " 0.09530128421030515\n",
+       " 0.15436688597484238"
       ]
      },
      "execution_count": 34,
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "electrical-watson",
    "metadata": {},
    "outputs": [
@@ -998,7 +998,7 @@
        "viennet (generic function with 1 method)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 36,
    "id": "ca8f756b",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1064,7 @@
        " 54895.4  -31012.4  1.43226e7  -209308.0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "id": "8a2582e8",
    "metadata": {},
    "outputs": [
@@ -1086,16 +1086,16 @@
        "  memory estimate:  4.11 KiB\n",
        "  allocs estimate:  48\n",
        "  --------------\n",
-       "  minimum time:     2.824 μs (0.00% GC)\n",
-       "  median time:      2.920 μs (0.00% GC)\n",
-       "  mean time:        3.268 μs (8.47% GC)\n",
-       "  maximum time:     385.203 μs (98.98% GC)\n",
+       "  minimum time:     2.834 μs (0.00% GC)\n",
+       "  median time:      2.984 μs (0.00% GC)\n",
+       "  mean time:        3.316 μs (7.99% GC)\n",
+       "  maximum time:     378.986 μs (98.84% GC)\n",
        "  --------------\n",
        "  samples:          10000\n",
        "  evals/sample:     9"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "id": "69563cd8",
    "metadata": {},
    "outputs": [
@@ -1117,16 +1117,16 @@
        "  memory estimate:  130.81 KiB\n",
        "  allocs estimate:  561\n",
        "  --------------\n",
-       "  minimum time:     119.031 μs (0.00% GC)\n",
-       "  median time:      119.911 μs (0.00% GC)\n",
-       "  mean time:        126.168 μs (3.24% GC)\n",
-       "  maximum time:     1.808 ms (92.10% GC)\n",
+       "  minimum time:     119.226 μs (0.00% GC)\n",
+       "  median time:      120.441 μs (0.00% GC)\n",
+       "  mean time:        129.016 μs (3.42% GC)\n",
+       "  maximum time:     2.038 ms (93.35% GC)\n",
        "  --------------\n",
        "  samples:          10000\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,7 +1137,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
+   "id": "1785059f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  467.36 KiB\n",
+       "  allocs estimate:  1212\n",
+       "  --------------\n",
+       "  minimum time:     461.219 μs (0.00% GC)\n",
+       "  median time:      469.946 μs (0.00% GC)\n",
+       "  mean time:        493.868 μs (3.13% GC)\n",
+       "  maximum time:     3.298 ms (80.00% GC)\n",
+       "  --------------\n",
+       "  samples:          10000\n",
+       "  evals/sample:     1"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(rosenbrock, [rand(100,1)...])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "d0ea9d02",
    "metadata": {},
    "outputs": [
@@ -1148,16 +1179,16 @@
        "  memory estimate:  8.20 MiB\n",
        "  allocs estimate:  7014\n",
        "  --------------\n",
-       "  minimum time:     10.907 ms (0.00% GC)\n",
-       "  median time:      11.232 ms (0.00% GC)\n",
-       "  mean time:        11.460 ms (1.87% GC)\n",
-       "  maximum time:     13.346 ms (8.90% GC)\n",
+       "  minimum time:     10.926 ms (0.00% GC)\n",
+       "  median time:      11.055 ms (0.00% GC)\n",
+       "  mean time:        11.237 ms (1.62% GC)\n",
+       "  maximum time:     12.861 ms (8.16% GC)\n",
        "  --------------\n",
-       "  samples:          437\n",
+       "  samples:          445\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1199,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
+   "id": "d134959f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  32.11 MiB\n",
+       "  allocs estimate:  15018\n",
+       "  --------------\n",
+       "  minimum time:     43.243 ms (0.00% GC)\n",
+       "  median time:      44.255 ms (1.64% GC)\n",
+       "  mean time:        44.794 ms (1.34% GC)\n",
+       "  maximum time:     48.740 ms (2.20% GC)\n",
+       "  --------------\n",
+       "  samples:          112\n",
+       "  evals/sample:     1"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(rosenbrock, [rand(1000,1)...])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "fe98d13f",
    "metadata": {},
    "outputs": [
@@ -1179,16 +1241,16 @@
        "  memory estimate:  1.23 GiB\n",
        "  allocs estimate:  90024\n",
        "  --------------\n",
-       "  minimum time:     1.104 s (1.49% GC)\n",
-       "  median time:      1.115 s (1.70% GC)\n",
-       "  mean time:        1.113 s (1.64% GC)\n",
-       "  maximum time:     1.122 s (1.74% GC)\n",
+       "  minimum time:     1.098 s (1.26% GC)\n",
+       "  median time:      1.107 s (1.42% GC)\n",
+       "  mean time:        1.115 s (1.44% GC)\n",
+       "  maximum time:     1.141 s (1.59% GC)\n",
        "  --------------\n",
        "  samples:          5\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "id": "f8edf685",
    "metadata": {},
    "outputs": [
@@ -1210,16 +1272,16 @@
        "  memory estimate:  4.89 GiB\n",
        "  allocs estimate:  190025\n",
        "  --------------\n",
-       "  minimum time:     4.546 s (1.67% GC)\n",
-       "  median time:      4.549 s (1.67% GC)\n",
-       "  mean time:        4.549 s (1.67% GC)\n",
-       "  maximum time:     4.553 s (1.66% GC)\n",
+       "  minimum time:     4.785 s (1.64% GC)\n",
+       "  median time:      4.808 s (1.66% GC)\n",
+       "  mean time:        4.808 s (1.66% GC)\n",
+       "  maximum time:     4.831 s (1.67% GC)\n",
        "  --------------\n",
        "  samples:          2\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "id": "83b2acac",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1311,7 @@
        " 215.454  -11.404  79458.7  3.72885e6"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "id": "ca9b7853",
    "metadata": {},
    "outputs": [
@@ -1271,16 +1333,16 @@
        "  memory estimate:  4.11 KiB\n",
        "  allocs estimate:  48\n",
        "  --------------\n",
-       "  minimum time:     2.769 μs (0.00% GC)\n",
-       "  median time:      2.843 μs (0.00% GC)\n",
-       "  mean time:        3.213 μs (8.78% GC)\n",
-       "  maximum time:     370.899 μs (98.59% GC)\n",
+       "  minimum time:     2.905 μs (0.00% GC)\n",
+       "  median time:      2.993 μs (0.00% GC)\n",
+       "  mean time:        3.472 μs (8.94% GC)\n",
+       "  maximum time:     499.458 μs (98.90% GC)\n",
        "  --------------\n",
        "  samples:          10000\n",
        "  evals/sample:     9"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "id": "e727c6aa",
    "metadata": {},
    "outputs": [
@@ -1302,16 +1364,16 @@
        "  memory estimate:  130.81 KiB\n",
        "  allocs estimate:  561\n",
        "  --------------\n",
-       "  minimum time:     86.151 μs (0.00% GC)\n",
-       "  median time:      89.173 μs (0.00% GC)\n",
-       "  mean time:        95.341 μs (4.63% GC)\n",
-       "  maximum time:     1.907 ms (93.97% GC)\n",
+       "  minimum time:     85.789 μs (0.00% GC)\n",
+       "  median time:      90.906 μs (0.00% GC)\n",
+       "  mean time:        96.727 μs (4.83% GC)\n",
+       "  maximum time:     2.191 ms (95.48% GC)\n",
        "  --------------\n",
        "  samples:          10000\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1384,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
+   "id": "bec4c6c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  467.36 KiB\n",
+       "  allocs estimate:  1212\n",
+       "  --------------\n",
+       "  minimum time:     332.996 μs (0.00% GC)\n",
+       "  median time:      339.232 μs (0.00% GC)\n",
+       "  mean time:        358.546 μs (4.26% GC)\n",
+       "  maximum time:     2.302 ms (79.92% GC)\n",
+       "  --------------\n",
+       "  samples:          10000\n",
+       "  evals/sample:     1"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(styblinskiTang, [rand(100,1)...])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "id": "e19a0938",
    "metadata": {},
    "outputs": [
@@ -1333,16 +1426,16 @@
        "  memory estimate:  8.20 MiB\n",
        "  allocs estimate:  7014\n",
        "  --------------\n",
-       "  minimum time:     7.378 ms (0.00% GC)\n",
-       "  median time:      7.658 ms (0.00% GC)\n",
-       "  mean time:        8.113 ms (2.72% GC)\n",
-       "  maximum time:     14.281 ms (9.41% GC)\n",
+       "  minimum time:     7.328 ms (0.00% GC)\n",
+       "  median time:      7.626 ms (0.00% GC)\n",
+       "  mean time:        7.804 ms (2.45% GC)\n",
+       "  maximum time:     10.570 ms (12.90% GC)\n",
        "  --------------\n",
-       "  samples:          616\n",
+       "  samples:          641\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,7 +1446,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 49,
+   "id": "77584e9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  32.11 MiB\n",
+       "  allocs estimate:  15018\n",
+       "  --------------\n",
+       "  minimum time:     28.744 ms (0.00% GC)\n",
+       "  median time:      29.704 ms (2.16% GC)\n",
+       "  mean time:        29.963 ms (1.74% GC)\n",
+       "  maximum time:     33.625 ms (3.84% GC)\n",
+       "  --------------\n",
+       "  samples:          167\n",
+       "  evals/sample:     1"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(styblinskiTang, [rand(1000,1)...])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "id": "48bffb6d",
    "metadata": {},
    "outputs": [
@@ -1364,16 +1488,16 @@
        "  memory estimate:  1.23 GiB\n",
        "  allocs estimate:  90024\n",
        "  --------------\n",
-       "  minimum time:     765.567 ms (2.63% GC)\n",
-       "  median time:      773.313 ms (2.60% GC)\n",
-       "  mean time:        772.496 ms (2.61% GC)\n",
-       "  maximum time:     777.980 ms (2.62% GC)\n",
+       "  minimum time:     737.323 ms (1.85% GC)\n",
+       "  median time:      764.241 ms (2.10% GC)\n",
+       "  mean time:        760.267 ms (2.09% GC)\n",
+       "  maximum time:     787.906 ms (2.37% GC)\n",
        "  --------------\n",
        "  samples:          7\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "id": "2ba9d855",
    "metadata": {},
    "outputs": [
@@ -1395,16 +1519,16 @@
        "  memory estimate:  4.89 GiB\n",
        "  allocs estimate:  190025\n",
        "  --------------\n",
-       "  minimum time:     3.054 s (2.50% GC)\n",
-       "  median time:      3.056 s (2.48% GC)\n",
-       "  mean time:        3.056 s (2.48% GC)\n",
-       "  maximum time:     3.057 s (2.46% GC)\n",
+       "  minimum time:     3.107 s (2.39% GC)\n",
+       "  median time:      3.124 s (2.36% GC)\n",
+       "  mean time:        3.124 s (2.36% GC)\n",
+       "  maximum time:     3.142 s (2.32% GC)\n",
        "  --------------\n",
        "  samples:          2\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,6 +1606,14 @@
    "source": [
     "@benchmark J(KarolikJeleniewiczFunction, [rand(5,1)...])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11c0b92d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
