--- a/BackwardDiff.ipynb
+++ b/BackwardDiff.ipynb
@@ -706,10 +706,10 @@
        "  memory estimate:  7.98 KiB\n",
        "  allocs estimate:  190\n",
        "  --------------\n",
-       "  minimum time:     6.727 μs (0.00% GC)\n",
-       "  median time:      7.052 μs (0.00% GC)\n",
-       "  mean time:        7.770 μs (7.63% GC)\n",
-       "  maximum time:     691.288 μs (98.18% GC)\n",
+       "  minimum time:     6.475 μs (0.00% GC)\n",
+       "  median time:      6.946 μs (0.00% GC)\n",
+       "  mean time:        7.817 μs (7.63% GC)\n",
+       "  maximum time:     976.292 μs (98.15% GC)\n",
        "  --------------\n",
        "  samples:          10000\n",
        "  evals/sample:     5"
@@ -737,10 +737,10 @@
        "  memory estimate:  76.64 KiB\n",
        "  allocs estimate:  2041\n",
        "  --------------\n",
-       "  minimum time:     76.462 μs (0.00% GC)\n",
-       "  median time:      79.395 μs (0.00% GC)\n",
-       "  mean time:        85.967 μs (6.05% GC)\n",
-       "  maximum time:     4.162 ms (96.24% GC)\n",
+       "  minimum time:     77.329 μs (0.00% GC)\n",
+       "  median time:      79.840 μs (0.00% GC)\n",
+       "  mean time:        85.987 μs (5.37% GC)\n",
+       "  maximum time:     2.965 ms (96.29% GC)\n",
        "  --------------\n",
        "  samples:          10000\n",
        "  evals/sample:     1"
@@ -758,6 +758,37 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "8c7e3465",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  151.41 KiB\n",
+       "  allocs estimate:  4092\n",
+       "  --------------\n",
+       "  minimum time:     148.002 μs (0.00% GC)\n",
+       "  median time:      158.158 μs (0.00% GC)\n",
+       "  mean time:        171.302 μs (5.11% GC)\n",
+       "  maximum time:     3.895 ms (91.77% GC)\n",
+       "  --------------\n",
+       "  samples:          10000\n",
+       "  evals/sample:     1"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(rosenbrock,1,[rand(100,1)...]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "0df756b3",
    "metadata": {},
    "outputs": [
@@ -768,16 +799,16 @@
        "  memory estimate:  741.47 KiB\n",
        "  allocs estimate:  20494\n",
        "  --------------\n",
-       "  minimum time:     748.599 μs (0.00% GC)\n",
-       "  median time:      784.370 μs (0.00% GC)\n",
-       "  mean time:        844.777 μs (5.87% GC)\n",
-       "  maximum time:     4.626 ms (80.05% GC)\n",
+       "  minimum time:     753.102 μs (0.00% GC)\n",
+       "  median time:      770.391 μs (0.00% GC)\n",
+       "  mean time:        821.326 μs (5.41% GC)\n",
+       "  maximum time:     4.525 ms (78.57% GC)\n",
        "  --------------\n",
-       "  samples:          5900\n",
+       "  samples:          6070\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +819,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
+   "id": "5de6b332",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  1.46 MiB\n",
+       "  allocs estimate:  41485\n",
+       "  --------------\n",
+       "  minimum time:     1.528 ms (0.00% GC)\n",
+       "  median time:      1.569 ms (0.00% GC)\n",
+       "  mean time:        1.668 ms (5.56% GC)\n",
+       "  maximum time:     5.283 ms (63.97% GC)\n",
+       "  --------------\n",
+       "  samples:          2992\n",
+       "  evals/sample:     1"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(rosenbrock,1,[rand(1000,1)...]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "492510cf",
    "metadata": {},
    "outputs": [
@@ -799,16 +861,16 @@
        "  memory estimate:  7.26 MiB\n",
        "  allocs estimate:  209492\n",
        "  --------------\n",
-       "  minimum time:     8.061 ms (0.00% GC)\n",
-       "  median time:      8.425 ms (0.00% GC)\n",
-       "  mean time:        9.079 ms (7.50% GC)\n",
-       "  maximum time:     14.099 ms (40.23% GC)\n",
+       "  minimum time:     7.925 ms (0.00% GC)\n",
+       "  median time:      8.249 ms (0.00% GC)\n",
+       "  mean time:        8.805 ms (6.99% GC)\n",
+       "  maximum time:     12.632 ms (36.37% GC)\n",
        "  --------------\n",
-       "  samples:          551\n",
+       "  samples:          568\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "80678ea0",
    "metadata": {},
    "outputs": [
@@ -830,16 +892,16 @@
        "  memory estimate:  14.53 MiB\n",
        "  allocs estimate:  419493\n",
        "  --------------\n",
-       "  minimum time:     16.627 ms (0.00% GC)\n",
-       "  median time:      18.108 ms (0.00% GC)\n",
-       "  mean time:        19.527 ms (9.50% GC)\n",
-       "  maximum time:     28.943 ms (27.84% GC)\n",
+       "  minimum time:     16.464 ms (0.00% GC)\n",
+       "  median time:      17.127 ms (0.00% GC)\n",
+       "  mean time:        18.512 ms (9.16% GC)\n",
+       "  maximum time:     24.263 ms (16.97% GC)\n",
        "  --------------\n",
-       "  samples:          256\n",
+       "  samples:          270\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "2d44742d",
    "metadata": {},
    "outputs": [
@@ -869,16 +931,16 @@
        "  memory estimate:  10.14 KiB\n",
        "  allocs estimate:  218\n",
        "  --------------\n",
-       "  minimum time:     8.104 μs (0.00% GC)\n",
-       "  median time:      8.413 μs (0.00% GC)\n",
-       "  mean time:        9.270 μs (6.64% GC)\n",
-       "  maximum time:     1.161 ms (98.87% GC)\n",
+       "  minimum time:     8.012 μs (0.00% GC)\n",
+       "  median time:      8.625 μs (0.00% GC)\n",
+       "  mean time:        9.339 μs (6.12% GC)\n",
+       "  maximum time:     1.053 ms (98.70% GC)\n",
        "  --------------\n",
        "  samples:          10000\n",
        "  evals/sample:     3"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "d8c58cb7",
    "metadata": {},
    "outputs": [
@@ -900,16 +962,16 @@
        "  memory estimate:  73.52 KiB\n",
        "  allocs estimate:  1887\n",
        "  --------------\n",
-       "  minimum time:     70.681 μs (0.00% GC)\n",
-       "  median time:      73.063 μs (0.00% GC)\n",
-       "  mean time:        79.222 μs (5.94% GC)\n",
-       "  maximum time:     3.266 ms (96.62% GC)\n",
+       "  minimum time:     69.606 μs (0.00% GC)\n",
+       "  median time:      71.283 μs (0.00% GC)\n",
+       "  mean time:        76.601 μs (5.36% GC)\n",
+       "  maximum time:     2.891 ms (95.37% GC)\n",
        "  --------------\n",
        "  samples:          10000\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +982,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
+   "id": "f3932d00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  143.59 KiB\n",
+       "  allocs estimate:  3738\n",
+       "  --------------\n",
+       "  minimum time:     138.060 μs (0.00% GC)\n",
+       "  median time:      141.117 μs (0.00% GC)\n",
+       "  mean time:        152.691 μs (5.56% GC)\n",
+       "  maximum time:     3.061 ms (94.32% GC)\n",
+       "  --------------\n",
+       "  samples:          10000\n",
+       "  evals/sample:     1"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(styblinskiTang,1,[rand(100,1)...]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "e94255a0",
    "metadata": {},
    "outputs": [
@@ -931,16 +1024,16 @@
        "  memory estimate:  696.16 KiB\n",
        "  allocs estimate:  18540\n",
        "  --------------\n",
-       "  minimum time:     708.201 μs (0.00% GC)\n",
-       "  median time:      725.136 μs (0.00% GC)\n",
-       "  mean time:        784.001 μs (6.08% GC)\n",
-       "  maximum time:     4.326 ms (78.72% GC)\n",
+       "  minimum time:     691.687 μs (0.00% GC)\n",
+       "  median time:      708.943 μs (0.00% GC)\n",
+       "  mean time:        757.079 μs (5.59% GC)\n",
+       "  maximum time:     3.949 ms (81.65% GC)\n",
        "  --------------\n",
-       "  samples:          6357\n",
+       "  samples:          6583\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +1044,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
+   "id": "3b86b45c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  1.37 MiB\n",
+       "  allocs estimate:  37531\n",
+       "  --------------\n",
+       "  minimum time:     1.395 ms (0.00% GC)\n",
+       "  median time:      1.445 ms (0.00% GC)\n",
+       "  mean time:        1.546 ms (5.72% GC)\n",
+       "  maximum time:     4.899 ms (63.44% GC)\n",
+       "  --------------\n",
+       "  samples:          3228\n",
+       "  evals/sample:     1"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(styblinskiTang,1,[rand(1000,1)...]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "cdfe5809",
    "metadata": {},
    "outputs": [
@@ -962,16 +1086,16 @@
        "  memory estimate:  6.81 MiB\n",
        "  allocs estimate:  189538\n",
        "  --------------\n",
-       "  minimum time:     7.489 ms (0.00% GC)\n",
-       "  median time:      8.181 ms (0.00% GC)\n",
-       "  mean time:        8.978 ms (7.67% GC)\n",
-       "  maximum time:     16.071 ms (39.72% GC)\n",
+       "  minimum time:     7.161 ms (0.00% GC)\n",
+       "  median time:      7.641 ms (0.00% GC)\n",
+       "  mean time:        8.278 ms (7.27% GC)\n",
+       "  maximum time:     13.249 ms (41.73% GC)\n",
        "  --------------\n",
-       "  samples:          557\n",
+       "  samples:          604\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "a70061f6",
    "metadata": {},
    "outputs": [
@@ -993,22 +1117,95 @@
        "  memory estimate:  13.62 MiB\n",
        "  allocs estimate:  379539\n",
        "  --------------\n",
-       "  minimum time:     15.689 ms (0.00% GC)\n",
-       "  median time:      17.145 ms (0.00% GC)\n",
-       "  mean time:        18.401 ms (9.74% GC)\n",
-       "  maximum time:     26.703 ms (34.53% GC)\n",
+       "  minimum time:     14.961 ms (0.00% GC)\n",
+       "  median time:      15.786 ms (0.00% GC)\n",
+       "  mean time:        17.139 ms (9.19% GC)\n",
+       "  maximum time:     22.801 ms (29.64% GC)\n",
        "  --------------\n",
-       "  samples:          272\n",
+       "  samples:          292\n",
        "  evals/sample:     1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "@benchmark J(styblinskiTang,1,[rand(10000,1)...]) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa776ca5",
+   "metadata": {},
+   "source": [
+    "## Wykres "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "abcf1183",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "50588545",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [5,50,100,500,1000,5000,10000]\n",
+    "y_fw_rosenbrok = [3.316/1000, 129.016/1000,  493.868/1000,  11.237, 44.794, 1.115*1000,  4.808*1000]\n",
+    "y_fw_styblinskiTang = [3.472/1000,90.906/1000,358.546/1000,7.804,29.963,760.267,3.124*1000]\n",
+    "y_bw_rosenbrok = [7.198/1000,80.930/1000,161.235/1000,821.326/1000,1.668,8.805,18.512]\n",
+    "y_bw_styblinskiTang = [9.339/1000,76.601/1000,152.691/1000,757.079/1000,1.546,8.278,17.139]\n",
+    "\n",
+    "plot(x, y_fw_rosenbrok,label = \"Funkcja Rosenbrocka\", lw = 3, legend=:topleft)\n",
+    "# plot!(x, log.(y_fw_styblinskiTang))\n",
+    "# plot!(x, log.(y_bw_rosenbrok), label = \"Różniczkowanie w tył\", lw = 3)\n",
+    "plot!(x, y_fw_styblinskiTang, label = \"Funkcja Styblinski-Tang\", lw = 3)\n",
+    "# plot!(x, log.(y_bw_styblinskiTang))\n",
+    "# plot!(title=\"Średni czas obliczeń funkcji Rosenbrocka\")\n",
+    "xlabel!(\"Liczba zmiennych\")\n",
+    "ylabel!(\"Czas obliczeń [ms]\")\n",
+    "savefig(\"/home/ligerd/Algorithms_in_data_engineering/Forward.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d0778543",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(x, y_bw_rosenbrok,label = \"Funkcja Rosenbrocka\", lw = 3, legend=:topleft)\n",
+    "# plot!(x, log.(y_fw_styblinskiTang))\n",
+    "# plot!(x, log.(y_bw_rosenbrok), label = \"Różniczkowanie w tył\", lw = 3)\n",
+    "plot!(x, y_bw_styblinskiTang, label = \"Funkcja Styblinski-Tang\", lw = 3)\n",
+    "# plot!(x, log.(y_bw_styblinskiTang))\n",
+    "# plot!(title=\"Średni czas obliczeń funkcji Rosenbrocka\")\n",
+    "xlabel!(\"Liczba zmiennych\")\n",
+    "ylabel!(\"Czas obliczeń [ms]\")\n",
+    "savefig(\"/home/ligerd/Algorithms_in_data_engineering/Backward.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "fd4db85c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(x, log.(y_fw_styblinskiTang),label = \"Różniczkowanie w przód\", lw = 3, legend=:topleft)\n",
+    "plot!(x, log.(y_bw_styblinskiTang), label = \"Różniczkowanie w tył\", lw = 3)\n",
+    "plot!(title=\"Średni czas obliczeń funkcji Styblinski-Tang\")\n",
+    "savefig(\"/home/ligerd/Algorithms_in_data_engineering/Styblinski-Tang.png\")"
    ]
   },
   {
