working on functions

--- a/ADForward.ipynb
+++ b/ADForward.ipynb
@@ -158,14 +158,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "identical-hartford",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "focused-portable",
    "metadata": {},
@@ -669,12 +661,12 @@
        "  memory estimate:  32.11 MiB\n",
        "  allocs estimate:  15018\n",
        "  --------------\n",
-       "  minimum time:     43.212 ms (0.00% GC)\n",
-       "  median time:      44.108 ms (1.45% GC)\n",
-       "  mean time:        44.209 ms (1.13% GC)\n",
-       "  maximum time:     47.521 ms (0.00% GC)\n",
+       "  minimum time:     43.431 ms (0.00% GC)\n",
+       "  median time:      45.955 ms (1.66% GC)\n",
+       "  mean time:        45.697 ms (1.35% GC)\n",
+       "  maximum time:     48.464 ms (1.98% GC)\n",
        "  --------------\n",
-       "  samples:          114\n",
+       "  samples:          110\n",
        "  evals/sample:     1"
       ]
      },
@@ -700,9 +692,9 @@
      "data": {
       "text/plain": [
        "3-element Vector{Float64}:\n",
-       " 0.45729765595003324\n",
-       " 0.9551764265774303\n",
-       " 0.5506191695086682"
+       " 0.8395654249457625\n",
+       " 0.43839205940312964\n",
+       " 0.9026455164863709"
       ]
      },
      "execution_count": 24,
@@ -724,7 +716,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6475895176869497"
+      "0.36195732796999947"
      ]
     }
    ],
@@ -869,10 +861,10 @@
        "  memory estimate:  5.27 KiB\n",
        "  allocs estimate:  79\n",
        "  --------------\n",
-       "  minimum time:     3.933 μs (0.00% GC)\n",
-       "  median time:      4.041 μs (0.00% GC)\n",
-       "  mean time:        4.394 μs (5.21% GC)\n",
-       "  maximum time:     289.774 μs (97.92% GC)\n",
+       "  minimum time:     4.099 μs (0.00% GC)\n",
+       "  median time:      4.289 μs (0.00% GC)\n",
+       "  mean time:        4.635 μs (5.54% GC)\n",
+       "  maximum time:     307.531 μs (98.22% GC)\n",
        "  --------------\n",
        "  samples:          10000\n",
        "  evals/sample:     8"
@@ -913,69 +905,6 @@
    ],
    "source": [
     "J(f, [2.9,2.2,1546.23])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "returning-ethiopia",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BenchmarkTools.Parameters(5.0, 10000, 8, 0.0, true, false, 0.05, 0.01)\n"
-     ]
-    }
-   ],
-   "source": [
-    "println(z.params)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "monetary-vermont",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BenchmarkTools.Trial\n",
-      "  params: BenchmarkTools.Parameters\n",
-      "    seconds: Float64 5.0\n",
-      "    samples: Int64 10000\n",
-      "    evals: Int64 8\n",
-      "    overhead: Float64 0.0\n",
-      "    gctrial: Bool true\n",
-      "    gcsample: Bool false\n",
-      "    time_tolerance: Float64 0.05\n",
-      "    memory_tolerance: Float64 0.01\n",
-      "  times: Array{Float64}((10000,)) [3933.375, 3935.0, 3937.875, 3942.875, 3943.125, 3944.0, 3944.5, 3944.875, 3946.625, 3946.625  …  11986.75, 247868.625, 249471.25, 250823.5, 253074.125, 253084.125, 256742.25, 260741.875, 271286.25, 289774.0]\n",
-      "  gctimes: Array{Float64}((10000,)) [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0  …  0.0, 243103.5, 244699.125, 245910.625, 248343.75, 248148.125, 251971.75, 255965.125, 266294.125, 283754.0]\n",
-      "  memory: Int64 5392\n",
-      "  allocs: Int64 79\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3-element Vector{Float64}:\n",
-       " 0.05492853965120337\n",
-       " 0.09530128421030515\n",
-       " 0.15436688597484238"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dump(z)\n",
-    "rand(3)"
    ]
   },
   {
@@ -1020,11 +949,35 @@
     "    value\n",
     "end\n",
     "\n",
-    "function KarolikJeleniewiczFunction(x)\n",
-    "    f1 = 222.83*(x[2]^8+x[3]^-3)^2 + sin(x[5]^18) - cos(x[1])/exp(x[3])\n",
-    "    f2 = x[1] - 5/x[2] + 4*x[3]^2-2*x[4] / (x[3]*sin(x[5])^2 + 1)\n",
-    "    f3 = sqrt(exp(x[2])^2) + x[3]^x[2] - x[4]\n",
-    "    [f1,f2,f3]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "4e05915a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestFunction5 (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function TestFunction1(x)\n",
+    "    f1 = 123.83*(x[2]^8)^2 + cos(x[1]^18) - sin(x[1])/exp(x[2])\n",
+    "end\n",
+    "\n",
+    "function TestFunction2(x)\n",
+    "    f1 = 222.83*(x[2]^8+x[1]^-3)^2 + sin(x[1]^18) - cos(x[2])/exp(x[1])\n",
+    "    f2 = x[1] - 5/x[2] + 4*x[1]^2-2*x[2] / (x[2]*sin(x[2])^2 + 1)\n",
+    "    [f1,f2]\n",
     "end\n",
     "\n",
     "function viennet(x)\n",
@@ -1032,7 +985,24 @@
     "    f2 = (x[1]-2*x[2]+4)^2/8 + (x[1]-x[2]+1)^2/27 + 15\n",
     "    f3 = 1/(x[1]^2+x[2]^2+1) - 1.1* exp(-(x[1]^2+x[2]^2))\n",
     "    [f1,f2,f3]\n",
-    "end\n"
+    "end\n",
+    "\n",
+    "function TestFunction4(x)\n",
+    "    f1 = 222.83*(x[2]^8+x[1]^-3)^2 + sin(x[1]^18) - cos(x[2])/exp(x[1])\n",
+    "    f2 = (x[1]^15-234.32)^3 + (tan(x[2]^5) + sin(x[1])^98)^36 \n",
+    "    f3 = x[1]*x[2]^34 - tan(343)^2 - sin(x[1])^8\n",
+    "    f4 = (x[1]^2+x[2]-4325.43)^23 - cos(x[2])*sin(x[1])^3\n",
+    "    [f1,f2,f3,f4]\n",
+    "end\n",
+    "\n",
+    "function TestFunction5(x)\n",
+    "    f1 = 222.83*(x[2]^8+x[1]^-3)^2 + sin(x[1]^18) - cos(x[2])/exp(x[1])\n",
+    "    f2 = x[1]+x[1]^232+(sqrt(x[2]))^2+ (x[1]+x[2]^3)/233\n",
+    "    f3 = 2342434+23*x[1]^32-tan(x[2])+ (x[2]*sin(x[2])^2 + 1)\n",
+    "    f4 = 4*x[1]^2-2*x[2] / (x[2]*sin(x[2])^2 + 1)\n",
+    "    f5 = x[1] - 5/x[2] + 4*x[1]^2-2*x[2]\n",
+    "    [f1,f2,f3,f4,f5]\n",
+    "end"
    ]
   },
   {
@@ -1547,6 +1517,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "id": "2a19c831",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5×2 Matrix{Float64}:\n",
+       "  3.13652e13    2.13699e11\n",
+       "  4.71209e169   1.14021\n",
+       "  2.08655e25    0.0274515\n",
+       " 42.4           4.08665\n",
+       " 43.4          -1.54086"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "J(TestFunction5, [5.3,3.3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "d8e055c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  1.50 KiB\n",
+       "  allocs estimate:  19\n",
+       "  --------------\n",
+       "  minimum time:     2.284 μs (0.00% GC)\n",
+       "  median time:      2.363 μs (0.00% GC)\n",
+       "  mean time:        2.528 μs (4.21% GC)\n",
+       "  maximum time:     377.035 μs (99.06% GC)\n",
+       "  --------------\n",
+       "  samples:          10000\n",
+       "  evals/sample:     9"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(TestFunction1, [rand(2,1)...])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "a4db2ab2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  2.39 KiB\n",
+       "  allocs estimate:  37\n",
+       "  --------------\n",
+       "  minimum time:     3.484 μs (0.00% GC)\n",
+       "  median time:      3.561 μs (0.00% GC)\n",
+       "  mean time:        3.825 μs (3.93% GC)\n",
+       "  maximum time:     399.063 μs (98.81% GC)\n",
+       "  --------------\n",
+       "  samples:          10000\n",
+       "  evals/sample:     8"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(TestFunction2, [rand(2,1)...])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
    "id": "e83a6ae5",
    "metadata": {},
@@ -1558,10 +1616,10 @@
        "  memory estimate:  2.72 KiB\n",
        "  allocs estimate:  41\n",
        "  --------------\n",
-       "  minimum time:     2.290 μs (0.00% GC)\n",
-       "  median time:      2.385 μs (0.00% GC)\n",
-       "  mean time:        2.602 μs (5.19% GC)\n",
-       "  maximum time:     294.911 μs (98.73% GC)\n",
+       "  minimum time:     2.324 μs (0.00% GC)\n",
+       "  median time:      2.431 μs (0.00% GC)\n",
+       "  mean time:        2.639 μs (5.19% GC)\n",
+       "  maximum time:     297.294 μs (98.73% GC)\n",
        "  --------------\n",
        "  samples:          10000\n",
        "  evals/sample:     9"
@@ -1578,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 43,
    "id": "0a5ac99b",
    "metadata": {},
    "outputs": [
@@ -1586,34 +1644,57 @@
      "data": {
       "text/plain": [
        "BenchmarkTools.Trial: \n",
-       "  memory estimate:  7.16 KiB\n",
-       "  allocs estimate:  103\n",
+       "  memory estimate:  2.98 KiB\n",
+       "  allocs estimate:  45\n",
        "  --------------\n",
-       "  minimum time:     10.838 μs (0.00% GC)\n",
-       "  median time:      11.674 μs (0.00% GC)\n",
-       "  mean time:        12.357 μs (2.18% GC)\n",
-       "  maximum time:     2.709 ms (99.32% GC)\n",
+       "  minimum time:     7.949 μs (0.00% GC)\n",
+       "  median time:      8.257 μs (0.00% GC)\n",
+       "  mean time:        8.544 μs (0.99% GC)\n",
+       "  maximum time:     858.725 μs (98.79% GC)\n",
        "  --------------\n",
        "  samples:          10000\n",
-       "  evals/sample:     1"
+       "  evals/sample:     3"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "@benchmark J(KarolikJeleniewiczFunction, [rand(5,1)...])"
+    "@benchmark J(TestFunction4, [rand(2,1)...])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "11c0b92d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  3.31 KiB\n",
+       "  allocs estimate:  49\n",
+       "  --------------\n",
+       "  minimum time:     5.143 μs (0.00% GC)\n",
+       "  median time:      5.330 μs (0.00% GC)\n",
+       "  mean time:        5.611 μs (2.82% GC)\n",
+       "  maximum time:     428.075 μs (98.39% GC)\n",
+       "  --------------\n",
+       "  samples:          10000\n",
+       "  evals/sample:     6"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(TestFunction5, [rand(2,1)...])"
+   ]
   },
   {
    "cell_type": "markdown",
