--- a/BackwardDiff.ipynb
+++ b/BackwardDiff.ipynb
@@ -637,7 +637,7 @@
     {
      "data": {
       "text/plain": [
-       "viennet (generic function with 1 method)"
+       "rosenbrock (generic function with 1 method)"
       ]
      },
      "execution_count": 15,
@@ -660,13 +660,35 @@
     "        value += (1-x[i-1])^2 + 100*(x[i] - x[i-1]^2)^2\n",
     "    end\n",
     "    value\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a8b479c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestFunction5 (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function TestFunction1(x)\n",
+    "    f1 = 123.83*(x[2]^8)^2 + cos(x[1]^18) - sin(x[1])/exp(x[2])\n",
     "end\n",
     "\n",
-    "function KarolikJeleniewiczFunction(x)\n",
-    "    f1 = 222.83*(x[2]^8+x[3]^-3)^2 + sin(x[5]^18) - cos(x[1])/exp(x[3])\n",
-    "    f2 = x[1] - 5/x[2] + 4*x[3]^2-2*x[4] / (x[3]*sin(x[5])^2 + 1)\n",
-    "    f3 = sqrt(exp(x[2])^2) + x[3]^x[2] - x[4]\n",
-    "    [f1,f2,f3]\n",
+    "function TestFunction2(x)\n",
+    "    f1 = 222.83*(x[2]^8+x[1]^-3)^2 + sin(x[1]^18) - cos(x[2])/exp(x[1])\n",
+    "    f2 = x[1] - 5/x[2] + 4*x[1]^2-2*x[2] / (x[2]*sin(x[2])^2 + 1)\n",
+    "    [f1,f2]\n",
     "end\n",
     "\n",
     "function viennet(x)\n",
@@ -674,6 +696,23 @@
     "    f2 = (x[1]-2*x[2]+4)^2/8 + (x[1]-x[2]+1)^2/27 + 15\n",
     "    f3 = 1/(x[1]^2+x[2]^2+1) - 1.1* exp(-(x[1]^2+x[2]^2))\n",
     "    [f1,f2,f3]\n",
+    "end\n",
+    "\n",
+    "function TestFunction4(x)\n",
+    "    f1 = 222.83*(x[2]^8+x[1]^-3)^2 + sin(x[1]^18) - cos(x[2])/exp(x[1])\n",
+    "    f2 = (x[1]^15-234.32)^3 + (tan(x[2]^5) + sin(x[1])^98)^36 \n",
+    "    f3 = x[1]*x[2]^34 - tan(343)^2 - sin(x[1])^8\n",
+    "    f4 = (x[1]^2+x[2]-4325.43)^23 - cos(x[2])*sin(x[1])^3\n",
+    "    [f1,f2,f3,f4]\n",
+    "end\n",
+    "\n",
+    "function TestFunction5(x)\n",
+    "    f1 = 222.83*(x[2]^8+x[1]^-3)^2 + sin(x[1]^18) - cos(x[2])/exp(x[1])\n",
+    "    f2 = x[1]+x[1]^232+(sqrt(x[2]))^2+ (x[1]+x[2]^3)/233\n",
+    "    f3 = 2342434+23*x[1]^32-tan(x[2])+ (x[2]*sin(x[2])^2 + 1)\n",
+    "    f4 = 4*x[1]^2-2*x[2] / (x[2]*sin(x[2])^2 + 1)\n",
+    "    f5 = x[1] - 5/x[2] + 4*x[1]^2-2*x[2]\n",
+    "    [f1,f2,f3,f4,f5]\n",
     "end"
    ]
   },
@@ -1218,55 +1257,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "a1fe7eec",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: \n",
-       "  memory estimate:  11.30 KiB\n",
-       "  allocs estimate:  243\n",
-       "  --------------\n",
-       "  minimum time:     6.347 μs (0.00% GC)\n",
-       "  median time:      6.678 μs (0.00% GC)\n",
-       "  mean time:        7.607 μs (10.19% GC)\n",
-       "  maximum time:     720.508 μs (98.16% GC)\n",
-       "  --------------\n",
-       "  samples:          10000\n",
-       "  evals/sample:     5"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "@benchmark J(viennet,2, [rand(2,1)...])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 28,
-   "id": "e0b51097",
+   "id": "2b7700bf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BenchmarkTools.Trial: \n",
-       "  memory estimate:  18.30 KiB\n",
-       "  allocs estimate:  429\n",
-       "  --------------\n",
-       "  minimum time:     16.850 μs (0.00% GC)\n",
-       "  median time:      17.867 μs (0.00% GC)\n",
-       "  mean time:        19.585 μs (6.73% GC)\n",
-       "  maximum time:     3.396 ms (98.93% GC)\n",
-       "  --------------\n",
-       "  samples:          10000\n",
-       "  evals/sample:     1"
+       "5-element Vector{Matrix{Float64}}:\n",
+       " [3.13652106757129e13; 2.1369922567008554e11]\n",
+       " [4.712093101741395e169; 1.140214592274678]\n",
+       " [2.0865546881500618e25; 0.027451499719419292]\n",
+       " [42.4; 4.086653233042158]\n",
+       " [43.4; -1.5408631772268135]"
       ]
      },
      "execution_count": 28,
@@ -1275,7 +1278,162 @@
     }
    ],
    "source": [
-    "@benchmark J(KarolikJeleniewiczFunction,3, [rand(5,1)...])"
+    "J(TestFunction5,5, [5.3,3.3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "916d2ddf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  2.97 KiB\n",
+       "  allocs estimate:  69\n",
+       "  --------------\n",
+       "  minimum time:     3.075 μs (0.00% GC)\n",
+       "  median time:      3.253 μs (0.00% GC)\n",
+       "  mean time:        3.523 μs (5.40% GC)\n",
+       "  maximum time:     394.993 μs (99.09% GC)\n",
+       "  --------------\n",
+       "  samples:          10000\n",
+       "  evals/sample:     8"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(TestFunction1,1, [rand(2,1)...])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6efe3c29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  10.36 KiB\n",
+       "  allocs estimate:  229\n",
+       "  --------------\n",
+       "  minimum time:     7.583 μs (0.00% GC)\n",
+       "  median time:      7.792 μs (0.00% GC)\n",
+       "  mean time:        8.662 μs (7.34% GC)\n",
+       "  maximum time:     754.966 μs (98.50% GC)\n",
+       "  --------------\n",
+       "  samples:          10000\n",
+       "  evals/sample:     4"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(TestFunction2,2, [rand(2,1)...])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a1fe7eec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  16.83 KiB\n",
+       "  allocs estimate:  365\n",
+       "  --------------\n",
+       "  minimum time:     9.258 μs (0.00% GC)\n",
+       "  median time:      9.720 μs (0.00% GC)\n",
+       "  mean time:        11.033 μs (7.46% GC)\n",
+       "  maximum time:     2.863 ms (99.45% GC)\n",
+       "  --------------\n",
+       "  samples:          10000\n",
+       "  evals/sample:     1"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(viennet,3, [rand(2,1)...])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e0b51097",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  22.30 KiB\n",
+       "  allocs estimate:  499\n",
+       "  --------------\n",
+       "  minimum time:     15.259 μs (0.00% GC)\n",
+       "  median time:      15.968 μs (0.00% GC)\n",
+       "  mean time:        17.940 μs (7.66% GC)\n",
+       "  maximum time:     2.953 ms (99.06% GC)\n",
+       "  --------------\n",
+       "  samples:          10000\n",
+       "  evals/sample:     1"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(TestFunction4,4, [rand(2,1)...])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "876760be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: \n",
+       "  memory estimate:  38.38 KiB\n",
+       "  allocs estimate:  785\n",
+       "  --------------\n",
+       "  minimum time:     20.006 μs (0.00% GC)\n",
+       "  median time:      20.884 μs (0.00% GC)\n",
+       "  mean time:        23.805 μs (9.35% GC)\n",
+       "  maximum time:     3.053 ms (98.94% GC)\n",
+       "  --------------\n",
+       "  samples:          10000\n",
+       "  evals/sample:     1"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@benchmark J(TestFunction5,5, [rand(2,1)...])"
    ]
   },
   {
