working on plots

--- a/BackwardDiff.ipynb
+++ b/BackwardDiff.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "requested-variable",
    "metadata": {},
    "outputs": [],
    "source": [
     "import Base: iterate, exp, log, sin, cos, tan, +, ^, -, *, /, sqrt, convert, promote_rule, zero,max, isless\n",
-    "using BenchmarkTools"
+    "using BenchmarkTools\n",
+    "using Plots"
    ]
   },
   {
@@ -1184,16 +1185,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "abcf1183",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using Plots"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
    "id": "50588545",
    "metadata": {},
@@ -1434,6 +1425,35 @@
    ],
    "source": [
     "@benchmark J(TestFunction5,5, [rand(2,1)...])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff0858b2",
+   "metadata": {},
+   "source": [
+    "## Wykresy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1525d7fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [1,2,3,4,5]\n",
+    "y_fw = [2.528, 3.825,  2.639,  8.544, 5.611]\n",
+    "y_bw = [3.523,8.662,11.033,17.940,23.805]\n",
+    "plot(x, y_fw,label = \"Różniczkowanie w przód\", lw = 3, legend=:topleft)\n",
+    "# plot!(x, log.(y_fw_styblinskiTang))\n",
+    "# plot!(x, log.(y_bw_rosenbrok), label = \"Różniczkowanie w tył\", lw = 3)\n",
+    "plot!(x, y_bw, label = \"Różniczkowanie w tył\", lw = 3)\n",
+    "# plot!(x, log.(y_bw_styblinskiTang))\n",
+    "# plot!(title=\"Średni czas obliczeń funkcji Rosenbrocka\")\n",
+    "xlabel!(\"Liczba funkcji\")\n",
+    "ylabel!(\"Czas obliczeń [μs]\")\n",
+    "savefig(\"/home/ligerd/Algorithms_in_data_engineering/Zmienna_Liczba_Funkcji.png\")"
    ]
   },
   {
