adding zip of tex

--- a/BackwardDiff.ipynb
+++ b/BackwardDiff.ipynb
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "1525d7fd",
    "metadata": {},
    "outputs": [],
@@ -1451,7 +1451,7 @@
     "plot!(x, y_bw, label = \"Różniczkowanie w tył\", lw = 3)\n",
     "# plot!(x, log.(y_bw_styblinskiTang))\n",
     "# plot!(title=\"Średni czas obliczeń funkcji Rosenbrocka\")\n",
-    "xlabel!(\"Liczba funkcji\")\n",
+    "xlabel!(\"Liczba funkcji składowych\")\n",
     "ylabel!(\"Czas obliczeń [μs]\")\n",
     "savefig(\"/home/ligerd/Algorithms_in_data_engineering/Zmienna_Liczba_Funkcji.png\")"
    ]
